--- a/CC1/homedesign/myapp/src/assets/cssfiles/Login.css
+++ b/CC1/homedesign/myapp/src/assets/cssfiles/Login.css
@@ -1,18 +1,15 @@
 
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
 
-/* * {
-	box-sizing: border-box;
-} */
 
 .body {
-	background: #f6f5f7;
+
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
 	font-family: 'Montserrat', sans-serif;
-	height: 90vh;
+	height: 100vh;
 	
 }
 
@@ -115,37 +112,6 @@ input {
 	width: 50%;
 	z-index: 2;
 }
-
-.container.right-panel-active .sign-in-container {
-	transform: translateX(100%);
-}
-
-.sign-up-container {
-	left: 0;
-	width: 50%;
-	opacity: 0;
-	z-index: 1;
-}
-
-.container.right-panel-active .sign-up-container {
-	transform: translateX(100%);
-	opacity: 1;
-	z-index: 5;
-	animation: show 0.6s;
-}
-
-@keyframes show {
-	0%, 49.99% {
-		opacity: 0;
-		z-index: 1;
-	}
-	
-	50%, 100% {
-		opacity: 1;
-		z-index: 5;
-	}
-}
-
 .overlay-container {
 	position: absolute;
 	top: 0;
@@ -156,64 +122,12 @@ input {
 	transition: transform 0.6s ease-in-out;
 	z-index: 100;
 }
-
-.container.right-panel-active .overlay-container{
-	transform: translateX(-100%);
+.images img{
+    background-repeat: no-repeat;
+	background-size: contain;
+	height:600px;
+	width: 390px;
 }
-
-.overlay {
-	/* background: #FF416C;
-	background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
-	background: linear-gradient(to right, #FF4B2B, #FF416C); */
-    background-color:#9FE2BF;
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: 0 0;
-	color: #FFFFFF;
-	position: relative;
-	left: -100%;
-	height: 100%;
-	width: 200%;
-  	transform: translateX(0);
-	transition: transform 0.6s ease-in-out;
-}
-
-.container.right-panel-active .overlay {
-  	transform: translateX(50%);
-}
-
-.overlay-panel {
-	position: absolute;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	padding: 0 0px;
-	text-align: center;
-	top: 0;
-	height: 100%;
-	width: 50%;
-	transform: translateX(0);
-	transition: transform 0.6s ease-in-out;
-}
-
-.overlay-left {
-	transform: translateX(-20%);
-}
-
-.container.right-panel-active .overlay-left {
-	transform: translateX(0);
-}
-
-.overlay-right {
-	right: 0;
-	transform: translateX(0);
-}
-
-.container.right-panel-active .overlay-right {
-	transform: translateX(20%);
-}
-
 .social-container {
 	margin: 20px 0;
 }
@@ -227,6 +141,15 @@ input {
 	margin: 0 5px;
 	height: 40px;
 	width: 40px;
+} 
+
+.sign a{
+	color:blue;
+	text-decoration:underline;
 }
 
-
+.ic {
+	margin-left: 97%;
+    cursor: pointer;
+    text-align: center;
+}
